unpackaged/main/default/objects/Lead/fields/AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>AddressLine1__c</fullName>
    <description>Address street- maps to account billing address line 1 at conversion</description>
    <formula>Street</formula>
    <label>Address Line 1</label>
    <type>Text</type>
</CustomField>