unpackaged/main/default/objects/Lead/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <description>Address Line 2 - maps to billing address line 2 at conversion</description>
    <formula>City</formula>
    <label>Address Line 2</label>
    <type>Text</type>
</CustomField>