unpackaged/main/default/objects/Lead/fields/AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>AddressLine3__c</fullName>
    <description>Address line 3 - maps to billing address line 3 at conversion</description>
    <formula>State</formula>
    <label>Address Line 3</label>
    <type>Text</type>
</CustomField>