unpackaged/main/default/objects/Lead/fields/AddressPostcode__c.field-meta.xml
<CustomField>
    <fullName>AddressPostcode__c</fullName>
    <description>Address Postcode - maps to billing address postcode at conversion</description>
    <formula>PostalCode</formula>
    <label>Address Postcode</label>
    <type>Text</type>
</CustomField>