unpackaged/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City line of address</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>