unpackaged/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country line of address</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>