unpackaged/main/default/objects/Lead/fields/ExternalReferrer__c.field-meta.xml
<CustomField>
    <fullName>ExternalReferrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the external referrer</description>
    <label>External Referrer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>EXTERNAL REFERRER LOOKUP RELATIONSHIP MUST BE ACCOUNT TYPE = EXTERNAL REFERRER</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>External Referrer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>