unpackaged/main/default/objects/Lead/fields/LeadFirstName__c.field-meta.xml
<CustomField>
    <fullName>LeadFirstName__c</fullName>
    <description>First name for opportunity mapping</description>
    <formula>FirstName</formula>
    <label>Lead First Name</label>
    <type>Text</type>
</CustomField>