unpackaged/main/default/objects/Lead/fields/LeadLastName__c.field-meta.xml
<CustomField>
    <fullName>LeadLastName__c</fullName>
    <description>Lead last name for mapping to opportunity</description>
    <formula>LastName</formula>
    <label>Lead Last Name</label>
    <type>Text</type>
</CustomField>