unpackaged/main/default/objects/Lead/fields/LeadSalutation__c.field-meta.xml
<CustomField>
    <fullName>LeadSalutation__c</fullName>
    <description>Lead salutation for mapping to the opportunity</description>
    <formula>TEXT(Salutation)</formula>
    <label>Lead Salutation</label>
    <type>Text</type>
</CustomField>