unpackaged/main/default/objects/Lead/fields/Line1__c.field-meta.xml
<CustomField>
    <fullName>Line1__c</fullName>
    <description>Line 1 of the address</description>
    <label>Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>