unpackaged/main/default/objects/Lead/fields/Line2City__c.field-meta.xml
<CustomField>
    <fullName>Line2City__c</fullName>
    <description>Line 2/City of address</description>
    <label>Line 2/City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>