unpackaged/main/default/objects/Lead/fields/NextScheduledContactDate__c.field-meta.xml
<CustomField>
    <fullName>NextScheduledContactDate__c</fullName>
    <description>Next scheduled contact date for the lead</description>
    <label>Next Scheduled Contact Date</label>
    <type>DateTime</type>
</CustomField>