unpackaged/main/default/objects/Lead/fields/Postcode_ZIP_A2CC__c.field-meta.xml
<CustomField>
    <fullName>Postcode_ZIP_A2CC__c</fullName>
    <description>Postcode</description>
    <label>Postcode/ZIP/A2 CC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>