unpackaged/main/default/objects/Lead/fields/PreviousOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PreviousOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous opportunity that created the lead when closed/lost</description>
    <label>Previous Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>