unpackaged/main/default/objects/Lead/fields/UnqualifiedReason__c.field-meta.xml
<CustomField>
    <fullName>UnqualifiedReason__c</fullName>
    <description>Lead unqualified reason</description>
    <label>Unqualified Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>