unpackaged/main/default/objects/Lead/validationRules/Check_Referrer_Lookup.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Referrer_Lookup</fullName>
    <active>true</active>
    <description>Check external referrer lookup relationship is created if lead source = External Referral</description>
    <errorConditionFormula>ISPICKVAL(LeadSource,&#39;External Referral&#39;)
&amp;&amp; ISBLANK(ExternalReferrer__c)</errorConditionFormula>
    <errorDisplayField>ExternalReferrer__c</errorDisplayField>
    <errorMessage>EXTERNAL REFERRER LOOKUP RELATIONSHIP MUST BE CREATED WHEN LEAD SOURCE = EXTERNAL REFERRAL</errorMessage>
</ValidationRule>