unpackaged/main/default/objects/Lead/validationRules/Check_Unqualified_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Unqualified_Reason</fullName>
    <active>true</active>
    <description>Check unqualified reason is populated when lead status = Unqualified</description>
    <errorConditionFormula>ISPICKVAL(Status,&#39;Unqualified&#39;)
&amp;&amp; ISBLANK(UnqualifiedReason__c)</errorConditionFormula>
    <errorDisplayField>UnqualifiedReason__c</errorDisplayField>
    <errorMessage>UNQUALIFIED REASON MUST BE POPULATED WHEN LEAD STATUS = UNQUALIFIED</errorMessage>
</ValidationRule>