unpackaged/main/default/objects/Lead/validationRules/NATTERBOX_MOBILE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_MOBILE</fullName>
    <active>true</active>
    <description>Check mobile phone number is valid for natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK( MobilePhone ), REGEX( MobilePhone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>MobilePhone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE NUMBER</errorMessage>
</ValidationRule>