unpackaged/main/default/objects/Lead/validationRules/NATTERBOX_PHONE.validationRule-meta.xml
<ValidationRule>
    <fullName>NATTERBOX_PHONE</fullName>
    <active>true</active>
    <description>Check phone number is valid for natterbox</description>
    <errorConditionFormula>NOT(OR(ISBLANK(Phone ), REGEX( Phone ,&quot;^\\+[1-9][0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>INVALID TELEPHONE NUMBER</errorMessage>
</ValidationRule>